@@ -93,6 +93,7 @@
      <include name="gnu/lists/SeqPosition.java"/>
      <include name="gnu/lists/Sequence.java"/>
      <include name="gnu/lists/SimpleVector.java"/>
+     <include name="gnu/lists/FString.java"/>
      <include name="gnu/lists/FVector.java"/>
      <include name="gnu/lists/LList.java"/>
      <include name="gnu/mapping/CallContext.java"/>
