@@ -1,3 +1,7 @@
+2004-04-22  Per Bothner  <per@bothner.com>
+
+	* build.xml  (build.selectjava):  Add gnu/lists/FString.java
+
 2004-04-17  Per Bothner  <per@bothner.com>
 
 	* kawa/standard/Scheme.java (initScheme):  Fix typo.
